@@ -879,6 +879,7 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
   Why do people invent these crazy options that change language semantics?
 * (bug 3762) Define missing Special:Import UI messages
 * (bug 3771) Handle internal functions in backtrace in wfAbruptExit()
+* (bug 3649) Remove obsolete, broken moveCustomMessages script
 
 
 === Caveats ===
